--- a/src/commons/components/PositiveNegativeLabel/PositiveNegativeLabel.css
+++ b/src/commons/components/PositiveNegativeLabel/PositiveNegativeLabel.css
@@ -1,7 +1,9 @@
 .positive-typography {
     color: green !important;
+    font-weight: bold;
 }
 
 .negative-typography {
     color: red !important;
+    font-weight: bold;
 }
